@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Group service class for group operations
@@ -58,7 +57,7 @@ public class GroupService {
     public List<GroupDTO> getGroups() {
         return groupRepository.findAll().stream()
                 .map(this::toGroupDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public GroupDTO getGroupById(String id) {
@@ -98,7 +97,7 @@ public class GroupService {
         return groupRepository.findAll().stream()
                 .filter(g -> g.getMembers().contains(userId))
                 .map(this::toGroupDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
